Calculate and show duration during event drag.
* Introduce moment.js and moment-duration-format.js.

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,8 @@
       "js": [
         "jquery-3.1.1.min.js",
         "lodash.core.min.js",
+        "moment.js",
+        "moment-duration-format.js",
         "content.js"
       ],
       "matches": [
