--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,9 @@
       ]
     }
   ],
-  "permissions": ["activeTab"]
+  "options_page": "options.html",
+  "permissions": [
+    "activeTab",
+    "storage"
+  ]
 }
