--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,12 @@
   "description": "Shows event durations on Google Calendar.",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon16.png"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
