--- a/manifest.json
+++ b/manifest.json
@@ -4,20 +4,20 @@
   "description": "Shows event durations on Google Calendar.",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "icon16.png"
+    "default_icon": "icons/icon16.png"
   },
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "content_scripts": [
     {
       "js": [
-        "jquery-3.1.1.min.js",
-        "lodash.core.min.js",
-        "moment.js",
-        "moment-duration-format.js",
+        "libraries/jquery-3.1.1.min.js",
+        "libraries/lodash.core.min.js",
+        "libraries/moment.js",
+        "libraries/moment-duration-format.js",
         "content.js"
       ],
       "matches": [
@@ -25,7 +25,7 @@
       ]
     }
   ],
-  "options_page": "options.html",
+  "options_page": "options/options.html",
   "permissions": [
     "activeTab",
     "storage"
