Make clicking of toolbar icon open options page.

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "js": [
